--- a/config.json
+++ b/config.json
@@ -1,3 +1,1 @@
-{
-	"website": "http://axemclion.github.io/perfslides"
-}
+{"website":"http://www.mavenhive.in/","creator":"http://perfmonkey.com","rand":0.014002796728163958,"created_at":"2014-07-29T05:03:02.002Z"}
