--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"website":"http://www.mavenhive.in/","creator":"http://perfmonkey.com","rand":0.8318854565732181,"created_at":"2014-07-29T05:21:41.129Z"}
+{"website":"http://mavenhive.in","creator":"http://perfmonkey.com","rand":0.7395882662385702,"created_at":"2014-08-18T14:42:50.330Z"}
